# checkers

./: .gitignore  Makefile  README.md  README.txt  notes.txt
extra/: nginx.conf
html/: code.js  index.html  style.css
rest/: .gitignore  rest.py
rust_engine/: .gitignore  Cargo.toml
rust_engine/examples/: ai_vs_ai.rs  perf.rs
rust_engine/src/: dame.rs  lib.rs  main.rs
rust_engine/src/ai/: minimax.rs  mod.rs
rust_engine/src/board/: board.rs  mod.rs  point.rs
